--- a/trunk/licenses/MRJAdapter-License.html
+++ b/trunk/licenses/MRJAdapter-License.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-	<title>Artistic License</title>
-</head>
-<body bgcolor="#FFFFFF">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html><head><title>Artistic License</title></head><body bgcolor="#ffffff">
 
 <h2 align="center">Artistic License</h2>
 
@@ -126,5 +121,5 @@ WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.</li>
 </ol>
 
 <center>The End</center>
-</body>
-</html>
+
+</body></html>
