implementing feature 1802954 (logarithmic waveform view). updated shortcuts help file. warning: there seems to be a problem with Server -> sendMsgSync, sometimes we get OSC timeouts, probably a new synchronization bug?
git-svn-id: file:///tmp/Eisenkraut@51 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/Shortcuts.html
+++ b/trunk/help/Shortcuts.html
@@ -43,17 +43,23 @@ The key modifier <code>Meta</code> is equivalent to the <code>Apple</code> (or <
 <LI><code>Shift+Tab</code> : extend selection to next marker</LI>
 <LI><code>Alt+Shift+Tab</code> : extend selection to previous marker</LI>
 <LI><code>Alt+F</code> : fit visible span to selection</LI>
-<LI><code>Alt+A</code> or <code>Meta+Cursor Left</code> : zoom all the way out</LI>
-<LI><code>Meta+Cursor Right</code> : zoom to sample level</LI>
 <LI><code>Delete</code> (<code>Backspace</code>) : remove selected time span</LI>
 <LI><code>Meta+A</code> : select whole document span</LI>
 <LI><code>M</code> : drop marker at current timeline position. only effective if marker display is enabled from the view menu.</LI>
 <LI><code>G</code> : open go-to-time dialog</LI>
 </UL>
-<h3>Main Frame</h3>
+<P>&nbsp;&nbsp;&nbsp;<B>Zooming</B>:</P>
+<UL>
+<LI><code>Ctrl+Cursor Left/Right</code> : horizontal zoom out/in</LI>
+<LI><code>Alt+A</code> or <code>Meta+Cursor Left</code> : zoom all the way out</LI>
+<LI><code>Meta+Cursor Right</code> : zoom to sample level</LI>
+<LI><code>Ctrl+Cursor Up/Down</code> : vertical zoom out/in (or ceiling adjustment in logarithmic mode)</LI>
+<LI><code>Ctrl+Alt+Cursor Up/Down</code> : noise floor adjustment (in logarithmic mode)</LI>
+</UL>
+<!-- <h3>Main Frame</h3>
 <UL>
 <LI><code>Delete</code> : clear console ; DOESN'T WORK</LI>
-</UL>
+</UL> -->
 <h3>Recorder Dialog</h3>
 <P>these are subject to changes!</P>
 <UL>
@@ -71,6 +77,10 @@ The key modifier <code>Meta</code> is equivalent to the <code>Apple</code> (or <
 <P>&nbsp;&nbsp;&nbsp;<B>Parameter Fields</B>:</P>
 <UL>
 <LI><code>Escape</code> : unfocus gadget</LI>
+</UL>
+<P>&nbsp;&nbsp;&nbsp;<B>Confirming Unsaved Changes</B>:</P>
+<UL>
+<LI><code>Meta+D</code> : choose &quot;don't save&quot;</LI>
 </UL>
 </body>
 </html>
