--- a/trunk/help/osc.html
+++ b/trunk/help/osc.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h2>OSC Command Reference</h2>
-<P>as of: 05-aug-07<br>
+<P>as of: 19-may-08<br>
 <b>warning:</b> OSC command set may be subject to changes.</P>
 
 <UL>
@@ -66,6 +66,8 @@
 	<LI><CODE>paste</CODE></LI>
 	<LI><CODE>delete</CODE></LI>
 	<LI><CODE>insertSilence &lt;(long) <VAR>numFrames</VAR>&gt;</CODE></LI>
+	<LI><CODE>replace &lt;(String) <VAR>fileName</VAR>&gt;[,  &lt;(long) <VAR>fileOffset</VAR>&gt;]</CODE></LI>
+	<LI><CODE>editMode &lt;(String) <VAR>mode</VAR>=("insert"|"overwrite"|"mix")&gt;</CODE></LI>
 	<LI>query properties:
 		<TABLE>
 		<TR><TD><CODE>id</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(int) <VAR>id</VAR>&gt;</CODE></TD></TR>
