--- a/trunk/SuperCollider/examples/SynthsTest.html
+++ b/trunk/SuperCollider/examples/SynthsTest.html
@@ -16,6 +16,7 @@ span.s1 {color: #0000bf}
 span.s2 {color: #000000}
 span.s3 {color: #606060}
 span.s4 {color: #007300}
+span.s5 {color: #bf0000}
 span.Apple-tab-span {white-space:pre}
 </style>
 </head>
@@ -95,10 +96,10 @@ span.Apple-tab-span {white-space:pre}
 <p class="p3"><span class="Apple-tab-span">	</span>flow.shift( 226, 4 );</p>
 <p class="p3"><span class="Apple-tab-span">	</span><span class="s1">JSCButton</span>( w, <span class="s1">Rect</span>( 0, 0, 60, 22 ))</p>
 <p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>.states_([[ <span class="s3">"Preview"</span> ], [ <span class="s3">"Preview"</span>, <span class="s1">Color</span>.white, <span class="s1">Color</span>.blue ]])</p>
-<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>.action_({ <span class="s1">arg</span> b; });</p>
+<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>.action_({ <span class="s1">arg</span> b; <span class="s5">/* to do */</span> });</p>
 <p class="p3"><span class="Apple-tab-span">	</span><span class="s1">JSCButton</span>( w, <span class="s1">Rect</span>( 0, 0, 60, 22 ))</p>
 <p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>.states_([[ <span class="s3">"Render"</span> ]])</p>
-<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>.action_({ <span class="s1">arg</span> b; });</p>
+<p class="p3"><span class="Apple-tab-span">	</span><span class="Apple-tab-span">	</span>.action_({ <span class="s1">arg</span> b; <span class="s5">/* to do */</span> });</p>
 <p class="p2"><span class="Apple-tab-span">	</span></p>
 <p class="p3"><span class="Apple-tab-span">	</span>w.front;<span class="Apple-converted-space"> </span></p>
 <p class="p3">)</p>
