removing the 'enc_this' workaround from the source code. prepping v0.70 release (starting to update the help docs)
git-svn-id: file:///tmp/Eisenkraut@107 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/ObserverTimeline.html
+++ b/trunk/help/ObserverTimeline.html
@@ -3,6 +3,7 @@
 <head>
 <title>Observer Timeline Tab</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Observer Timeline Tab</h1>
@@ -11,6 +12,6 @@ The timeline tab shows information about the timeline selection: The time range 
 copy operations, signal filtering and loop playback. Start and stop time in Minutes:Seconds.Millis
 may be altered by editing the corresponding textfield and hitting <code>Return</code>.
 </p>
-<IMG SRC="ObserverTimeline.png">
+<IMG SRC="ObserverTimeline.png" ALT="Screenshot of Timeline Tab">
 </body>
 </html>
