--- a/trunk/help/PrefsFrame.html
+++ b/trunk/help/PrefsFrame.html
@@ -3,14 +3,17 @@
 <head>
 <title>Preferences Frame</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Preferences Frame</h1>
 <p>
-The preferences are divided into two groups:
+The preferences are divided into thematic groups:
 <UL>
 <LI>the <A HREF="prefsGeneral.html">General</A> tab carries global programme and appearance settings, plus temporary folders and file I/O settings.</LI>
 <LI>the <A HREF="prefsAudio.html">Audio</A> tab carries settings that concern the audio playback using supercollider.</LI>
+<LI>the <A HREF="prefsOSC.html">OSC</A> tab carries settings that concern the Open&nbsp;Sound&nbsp;Control server built into Eisenkraut</LI>
+<LI>the <A HREF="prefsView.html">View</A> tab carries settings that relate to the view menu.</LI>
 </UL>
 </body>
 </html>
