--- a/trunk/help/TimelineScroll.html
+++ b/trunk/help/TimelineScroll.html
@@ -3,6 +3,7 @@
 <head>
 <title>Timeline Scrollbar</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Timeline Scrollbar</h1>
@@ -10,7 +11,7 @@
 The timelime scrollbar is used to select the portion of the timeline which
 is visible in the timeline frame. The scrollbars indicate the visible portion and can be dragged with the mouse to navigate through the session. They disappear when the total session's duration is visible in the timeline frame.
 </p>
-<IMG SRC="TimelineScroll.png">
+<IMG SRC="TimelineScroll.png" ALT="Screenshot of the Timeline Scrollbar">
 <p>
 A blue shaded rectangle indicates the current timeline selection in respect to the total session duration. A red vertical line indicates the current timeline position in respect to the total session duration. To alter these, use the
 <A HREF="TimelineAxis.html">timeline axis</A> or the <A HREF="TimelineToolPointer.html">pointer tool</A>.
