--- a/trunk/help/TransportTools.html
+++ b/trunk/help/TransportTools.html
@@ -3,6 +3,7 @@
 <head>
 <title>Transport Tools</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Transport Tools</h1>
@@ -10,7 +11,7 @@
 The transport tools control realtime playback of the session. From left to right
 you see the Rewind, Stop, Play, Fast Forward button, the Loop. Keyboard shortcuts are <code>Space</code> or <code>Keypad-0</code> for Play/Stop, <code>Numpad-/</code> for Loop. Rewind and Fast Forward will have shortcuts in the next version. <code>Shift + Space</code> will play back at half speed, <code>Shift + Alt + Space</code> will play back at double speed.
 </p>
-<IMG SRC="TransportTools.png">
+<IMG SRC="TransportTools.png" ALT="Screenshot of Transport Controls">
 <p>
 Loop playback: the loop playback uses the current timeline selection and can be
 altered using the <A HREF="TimelineAxis.html">timeline axis</A>, the <A HREF="TimelineToolPointer.html">timeline pointer tool</A> or the <A HREF="ObserverTimeline.html">observer time tab</a>.
