--- a/trunk/help/copyright.html
+++ b/trunk/help/copyright.html
@@ -3,6 +3,7 @@
 <head>
 <title>Copyright, Contact</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h3>Copyright</h3>
@@ -10,12 +11,12 @@
 Eisenkraut is (C)opyright by Hanns Holger Rutz. It is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation. This software is distributed in the hope that it will be useful, but <STRONG>without any warranty</STRONG>; without even the implied warranty of <strong>merchantability</strong> or <strong>fitness for a particular purpose</strong>. See the <A HREF="../licenses/Eisenkraut-License.txt">GNU General Public License</A> for more details.
 </P>
 <P>
-This software comes with a few free libraries which are installed in the <code>libraries</code> folder in binary format. Their sourcecode is publically available on the net or -- in consonance with ¤6 b of the LGPL -- on request through the author. these libraries are:
+This software comes with a few free libraries which are included in the main jar file in binary (class) format. In case of the Eisenkraut source distribution, they appear as separate jar files in the <code>libraries</code> folder. Their sourcecode is publically available on the net or -- in consonance with &sect;6 b of the LGPL -- on request through the author. these libraries are:
 </P>
 <UL>
 <LI><A HREF="http://www.sciss.de/jcollider/" CLASS="ext">JCollider</A> which provides the infrastructure to control SuperCollider. <A HREF="../licenses/JCollider-License.txt">GPL</A>.</LI>
 <LI>JCollider itself uses the <A HREF="http://www.sciss.de/netutil/" CLASS="ext">NetUtil</A> OSC library (<A HREF="../licenses/NetUtil-License.txt">LGPL</A>)</LI>
-<LI><A HREF="http://www.roydesign.net/mrjadapter/" CLASS="ext">MRJAdapter</A> by Steve Roy, which improves Mac OS look-and-feel. <A HREF="../licenses/MRJAdapter-License.html">Artistic License</A></LI>
+<LI><A HREF="http://homepage.mac.com/sroy/mrjadapter/" CLASS="ext">MRJAdapter</A> by Steve Roy, which improves Mac OS look-and-feel. <A HREF="../licenses/MRJAdapter-License.html">Artistic License</A></LI>
 </UL>
 <P>
 Eisenkraut makes use of the following third party sourcecodes:
