--- a/trunk/help/faq.html
+++ b/trunk/help/faq.html
@@ -3,6 +3,7 @@
 <head>
 <title>frequently asked questions</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h2>frequently asked questions</h2>
@@ -26,6 +27,5 @@ currently, eisenkraut has no means of finding out automatically about the connec
 <P>
 the same functionality is available by choosing the <code>Overwrite</code> edit mode and <code>Edit->Clear</code>.
 </P>
-</ul>
 </body>
 </html>
