--- a/trunk/help/index.html
+++ b/trunk/help/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Eisenkraut Help Contents</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <TABLE><TR><TD>
@@ -10,7 +11,7 @@
 <IMG SRC="application.png" ALT="">
 <h1 class="title">Eisenkraut&nbsp;Help</h1>
 </DIV>
-</TD><TD><IMG SRC="line.gif" WIDTH="1" HEIGHT="200"></TD><TD>
+</TD><TD><IMG SRC="line.gif" WIDTH="1" HEIGHT="200" ALT=""></TD><TD>
 <UL CLASS="noindent" STYLE="padding-left:12px;">
 <LI CLASS="plain"><A HREF="copyright.html">Copyright, Contact</A></LI>
 <LI CLASS="plain"><A HREF="intro.html">Introduction</A></LI>
