--- a/trunk/help/osc.html
+++ b/trunk/help/osc.html
@@ -3,6 +3,7 @@
 <head>
 <title>OSC Command Reference</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h2>OSC Command Reference</h2>
@@ -37,14 +38,9 @@
 		<TR><TD><CODE>masterGroup</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(int) <VAR>masterGroup-nodeID</VAR>&gt;</CODE></TD></TR>
 		</TABLE>
 	</LI>
-<!--	<LI>getter commands:
-		<TABLE>
-		<TR><TD><CODE>outputChannels</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD>T.B.A. !!! this will change because there will be a continuous master bus !!!</TD></TR>
-		</TABLE>
-	</LI> -->
 </UL></LI>
 <LI><CODE>/doc</CODE><UL>
-	<LI></CODE>open &lt;(String) <VAR>path</VAR>&gt;</CODE></LI>
+	<LI><CODE>open &lt;(String) <VAR>path</VAR>&gt;</CODE></LI>
 	<LI>query properties:
 		<TABLE>
 		<TR><TD><CODE>count</CODE></TD><TD>&nbsp;:&nbsp;</TD><TD><CODE>&lt;(int) <VAR>numberOfDocs</VAR>&gt;</CODE></TD></TR>
