--- a/trunk/help/prefsAudio.html
+++ b/trunk/help/prefsAudio.html
@@ -3,6 +3,7 @@
 <head>
 <title>Audio Prefs</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Audio Prefs</h1>
@@ -16,9 +17,11 @@ Audio preferences affect the playback of sound through supercollider
 <LI><A HREF="prefsAudioRate.html">Hardware Sample Rate</A></LI>
 </UL>
 <P>Advanced preferences (for experienced users):</P>
+<UL>
 <LI><A HREF="prefsSuperColliderOSC.html">SuperCollider OSC Socket</A></LI>
 <LI><A HREF="prefsSCBlockSize.html">Audio Block Size</A></LI>
 <LI><A HREF="prefsAudioBusses.html">Maximum Audio Busses</A></LI>
 <LI><A HREF="prefsSCMemSize.html">Realtime Memory</A></LI>
+</UL>
 </body>
 </html>
