--- a/trunk/help/prefsGeneral.html
+++ b/trunk/help/prefsGeneral.html
@@ -3,6 +3,7 @@
 <head>
 <title>General Prefs</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>General Prefs</h1>
@@ -11,15 +12,8 @@ General preferences affect the overall program look and performance.
 </p>
 <UL>
 <LI><A HREF="prefsTmpDir.html">Temporary Folder</A></LI>
-<LI><A HREF="prefsCacheActive.html">Cache Waveform Overview</A></LI>
-<LI><A HREF="prefsCacheCapacity.html">Cache Capacity</A></LI>
-<LI><A HREF="prefsCacheFolder.html">Cache Folder</A></LI>
-<LI><A HREF="prefsOSCServer.html">OSC Server</A></LI>
-<LI><A HREF="prefsLookAndFeel.html">Look-and-Feel</A></LI>
-<LI><A HREF="prefsInternalFrames.html">Internal Frames</A></LI>
-<LI><A HREF="prefsIntrudingSize.html">Frame Intruding Grow Box</A></LI>
-<!-- <LI><A HREF="prefsKeyStrokeHelp.html">Shortcut for Online Help</A></LI> -->
-<LI><A HREF="prefsFloatingPalettes.html">Floating Palettes</A></LI>
+<LI><A HREF="wavecache.html">Waveform Cache</A> (Active, Capacity, Folder)</LI>
+<LI><A HREF="prefsLookAndFeel.html">Look-and-Feel</A> (Look-and-Feel class, Window Decoration, Internal Frames, Grow Box, Floating Palettes)</LI>
 </UL>
 </body>
 </html>
