--- a/trunk/help/prefsTmpDir.html
+++ b/trunk/help/prefsTmpDir.html
@@ -3,6 +3,7 @@
 <head>
 <title>General Prefs : Temporary Folder</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>General Prefs : Temporary Folder</h1>
@@ -11,5 +12,6 @@ The application creates a couple of temporary files which will be deleted automa
 a session is closed or the program is quit. On Un*x systems, they should go to <code>&quot;/var/tmp&quot;</code>,
 but you may want to choose a folder on a different harddisk if your system partition is small, for example.
 </p>
+<P>Eisenkraut currently has no means to determine the free space in the temporary folder, so be sure to point it to a harddisk partition that is big enough to hold all the edits you wish to perform. As a rule of thumb, a monophonic sound at 44.1 kHz takes around 20 MB per minute (since all edits are performed in 32bit floating point format).</P>
 </body>
 </html>
