--- a/trunk/help/ChannelTrack.html
+++ b/trunk/help/ChannelTrack.html
@@ -3,6 +3,7 @@
 <head>
 <title>Channel Track Header</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Channel Track Header</h1>
