--- a/trunk/help/HelpOpenInBrowser.html
+++ b/trunk/help/HelpOpenInBrowser.html
@@ -3,6 +3,7 @@
 <head>
 <title>Open Help File in Browser</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Open Help File in Browser</h1>
