--- a/trunk/help/IOSetup.html
+++ b/trunk/help/IOSetup.html
@@ -3,6 +3,7 @@
 <head>
 <title>I/O Setup</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>I/O Setup</h1>
