--- a/trunk/help/MarkerAxis.html
+++ b/trunk/help/MarkerAxis.html
@@ -3,6 +3,7 @@
 <head>
 <title>Timeline Axis</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Marker Axis</h1>
