--- a/trunk/help/Shortcuts.html
+++ b/trunk/help/Shortcuts.html
@@ -3,6 +3,7 @@
 <head>
 <title>Keyboard Shortcuts</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Keyboard Shortcuts</h1>
@@ -11,7 +12,6 @@
 </P>
 <P>
 The key modifier <code>Meta</code> is equivalent to the <code>Apple</code> (or <code>Command</code>) key on Mac OS, and <code>Ctrl+Shift</code> on Linux and Windows.</P>
-</P>
 <h3>Document Frame</h3>
 <P>&nbsp;&nbsp;&nbsp;<B><A HREF="TransportTools.html">Transport</A></B>:</P>
 <UL>
