--- a/trunk/help/TimelineFrame.html
+++ b/trunk/help/TimelineFrame.html
@@ -3,6 +3,7 @@
 <head>
 <title>Waveform Frame</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Waveform Frame</h1>
