--- a/trunk/help/TimelineToolZoom.html
+++ b/trunk/help/TimelineToolZoom.html
@@ -3,6 +3,7 @@
 <head>
 <title>Zoom Timeline Tool</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Zoom Timeline Tool</h1>
