--- a/trunk/help/ToolBlending.html
+++ b/trunk/help/ToolBlending.html
@@ -3,6 +3,7 @@
 <head>
 <title>Blending Mode</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Blending Mode</h1>
