--- a/trunk/help/TransportPosition.html
+++ b/trunk/help/TransportPosition.html
@@ -3,12 +3,13 @@
 <head>
 <title>Transport Position</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Transport Position</h1>
 <p>
 The transport/timelime position is shown in Minutes:Seconds.Millis format and indicates both the current realtime playback position and the insertion point for clipboard paste operations. To numerically edit the position click on the text label. To graphically drag the position, use the <A HREF="TimelineAxis.html">timeline axis</A> or the <A HREF="TimelineToolPointer.html">pointer tool</A> of the timeline frame. To quickly return to the session start, press <code>Return</code> when the timeline frame is focussed.
 </p>
-<IMG SRC="TransportPalette.png">
+<IMG SRC="TransportPalette.png" ALT="Screenshot of Go-To-Time Dialog">
 </body>
 </html>
