--- a/trunk/help/prefsFloatingPalettes.html
+++ b/trunk/help/prefsFloatingPalettes.html
@@ -3,6 +3,7 @@
 <head>
 <title>General Prefs : Floating Palettes</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>General Prefs : Floating Palettes</h1>
