--- a/trunk/help/prefsOSC.html
+++ b/trunk/help/prefsOSC.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Line Timeline Tool</title>
+<title>OSC Prefs</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>Line Timeline Tool</h1>
+<h1>OSC Prefs</h1>
 <p>
-Not yet implemented!
+TO-DO....
 </p>
 </body>
 </html>
