--- a/trunk/help/prefsOSCServer.html
+++ b/trunk/help/prefsOSCServer.html
@@ -3,6 +3,7 @@
 <head>
 <title>General Prefs : OSC Server</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>General Prefs : OSC Server</h1>
