--- a/trunk/help/prefsSuperColliderOSC.html
+++ b/trunk/help/prefsSuperColliderOSC.html
@@ -3,6 +3,7 @@
 <head>
 <title>Audio Prefs : SuperCollider OSC Socket</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
 <h1>Audio Prefs : SuperCollider OSC Socket</h1>
