--- a/trunk/help/prefsView.html
+++ b/trunk/help/prefsView.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>General Prefs : Cache Waveform Overview</title>
+<title>View Prefs</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>General Prefs : Cache Waveform Overview</h1>
+<h1>View Prefs</h1>
 <p>
-enables/disables <A HREF="wavecache.html">waveform caching.</a>
-</P>
+TO-DO....
+</p>
 </body>
 </html>
